# EE538_Project2

./: .gitignore  EE538_Project2_Demo_Presentation.pptx  README.md  docker-compose.yml  run_demo.bat
backend/: package-lock.json  package.json  server.js
cpp-backend/: CMakeLists.txt  build.bat  main.cpp
cpp-worker/: CMakeLists.txt  main.cpp
extension/: background.js  content.js  manifest.json  popup.html  popup.js
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(browse)/: layout.tsx  page.tsx
web/app/api/course/delete-all/: route.ts
web/app/api/course/rename/: route.ts
web/app/api/files/[id]/: route.ts
web/app/api/items/: route.ts
web/app/api/items/[id]/: route.ts
web/app/api/items/bulk-delete/: route.ts
web/app/api/items/note/: route.ts
web/app/login/: actions.ts  login-form.tsx  page.tsx
web/components/: add-material-form.tsx  class-manage-controls.tsx  delete-item-button.tsx  item-metadata-editor.tsx  library-bulk-selection-context.tsx  library-grouped-list.tsx  library-sidebar-client.tsx  library-sidebar.tsx  library-sort-bar.tsx  library-toolbar.tsx  library-topic-pills.tsx  site-nav.tsx
web/lib/: library-access.ts  library-item-delete.ts  library-org.ts  material-kinds.ts  prisma.ts  uploads.ts
web/prisma/: schema.prisma
web/prisma/migrations/20260412120000_init/: migration.sql
web/prisma/migrations/20260413120000_remove_oauth_single_tenant/: migration.sql
web/prisma/migrations/20260413160000_notes_uploads_study_meta/: migration.sql
worker/: requirements.txt  worker.py
(+1 files in other folders)
